--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,26 +10,27 @@ jobs:
     strategy:
       matrix:
         # we want to test our package on several versions of Python
-        python-version: [3.8, 3.9, 3.11]
+        python-version: [3.11]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-        # make depends on poetry
       - name: Install dependencies
         run: |
+          python3 -m venv myenv
+          source venv/bin/activate
           pip install poetry
           poetry install
       - name: Run linter and pytest
         run: |
-          make check
+          poetry run make check
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v3.2.0
         if: github.ref_name == 'main'
         env:
           CC_TEST_REPORTER_ID: ccfc3f619871f6e9c6aa628ce7a58250a3a349280a9934d553952501838bb586
         with:
-          coverageCommand: make test-coverage
+          coverageCommand: poetry run make test-coverage
           debug: true
