--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install poetry
+          pip install flake8
           poetry install
       - name: Run linter and pytest
         run: |
