--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         # we want to test our package on several versions of Python
-        python-version: 3.11
+        python-version: [3.11]
     steps:
       - name: Python Coverage
         uses: orgoro/coverage@v3
