--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,18 @@ jobs:
         python-version: [3.11]
     steps:
 
-    - name: Python Black
+    - name: Python Linter
       # You may pin to the exact commit or the version.
-      # uses: cytopia/docker-black@49d77dfc9811e09dec98474b56acc73b71d3ac1e
-      uses: cytopia/docker-black@0.11
+      # uses: sunnysid3up/python-linter@93076bd8f740f062069291d738fc70c1b4171c1d
+      uses: sunnysid3up/python-linter@v0.1-beta.7
       with:
-        # Path to check (defaults to current directory)
-        path: # optional, default is ./
-          ./
+          # Source file or directory
+          source: .
+          # Set strictness for lint [low, medium, high]
+          strict: medium
+          # Pylint options
+          pylint-options: # optional, default is 
+          # Black options
+          black-options: # optional, default is 
+          # Isort options
+          isort-options: # optional, default is
