--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       uses: sunnysid3up/python-linter@v0.1-beta.7
       with:
           # Source file or directory
-          source: gendiff/scripts
+          source: gendiff/scripts/*
           # Set strictness for lint [low, medium, high]
           strict: medium
           # Pylint options
