--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,35 @@
 name: Python CI
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+
+on:
+  - push
+  - pull_request
+
 jobs:
-  Explore-GitHub-Actions:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         # we want to test our package on several versions of Python
         python-version: [3.11]
     steps:
-
-    - name: Python Linter
-      # You may pin to the exact commit or the version.
-      # uses: sunnysid3up/python-linter@93076bd8f740f062069291d738fc70c1b4171c1d
-      uses: sunnysid3up/python-linter@v0.1-beta.7
-      with:
-          # Source file or directory
-          source: gendiff/scripts/*
-          # Set strictness for lint [low, medium, high]
-          strict: medium
-          # Pylint options
-          pylint-options: # optional, default is 
-          # Black options
-          black-options: # optional, default is 
-          # Isort options
-          isort-options: # optional, default is
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+        # make depends on poetry
+      - name: Install dependencies
+        run: |
+          pip install poetry
+          make rebuild
+      - name: Run linter and pytest
+        run: |
+          make lint
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v3.2.0
+        if: github.ref_name == 'main'
+        env:
+          CC_TEST_REPORTER_ID: ccfc3f619871f6e9c6aa628ce7a58250a3a349280a9934d553952501838bb586
+        with:
+          coverageCommand: make test
+          debug: true
