--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ packages = [{include = "gendiff"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+mypy = "^1.0.0"
+flake8 = "^6.0.0"
+jsonschema = "^4.17.3"
 
 
 [build-system]
