--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
       - name: "Install requirements"
         run: |
           make install requirements.txt
+          make rebuild
 
       - name: "Run linters"
         run: |
