--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ dulwich==0.20.50
 filelock==3.9.0
 flake8==6.0.0
 frozenlist==1.3.3
-hexlet-code @ file:///Users/nikogamsahurdia/Desktop/Hexlet/Check_differens/python-project-50/dist/hexlet_code-0.1.0.tar.gz
+#hexlet-code @ file:///Users/nikogamsahurdia/Desktop/Hexlet/Check_differens/python-project-50/dist/hexlet_code-0.1.0.tar.gz
 html5lib==1.1
 idna==3.4
 importlib-metadata==6.0.0
