--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,5 +22,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-gendiff = "gendiff.gendiff:generate_diff"
-#gendiff = "gendiff.scripts.gendiff:generate_diff"
+gendiff = "gendiff.scripts.gendiff:generate_diff"
