--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-aiohttp==3.8.3
+aiohttp~=3.8.4
 async-timeout==4.0.2
-attrs==22.2.0
+attrs~=23.1.0
 CacheControl==0.12.11
 certifi==2022.12.7
 cffi==1.15.1
@@ -10,7 +10,7 @@ crashtest==0.4.1
 distlib==0.3.6
 dulwich==0.20.50
 filelock==3.9.0
-flake8==6.0.0
+flake8~=5.0.4
 frozenlist==1.3.3
 hexlet-code @ file:///Users/nikogamsahurdia/Desktop/Hexlet/Check_differens/python-project-50/dist/hexlet_code-0.1.0.tar.gz
 html5lib==1.1
@@ -24,10 +24,10 @@ mccabe==0.7.0
 more-itertools==9.0.0
 msgpack==1.0.4
 multidict==6.0.4
-mypy==1.0.0
+mypy~=1.2.0
 mypy-extensions==1.0.0
-openai==0.26.4
-packaging==23.0
+openai~=0.27.2
+packaging~=23.1
 pexpect==4.8.0
 pkginfo==1.9.6
 platformdirs==2.6.2
@@ -35,9 +35,9 @@ poetry==1.3.2
 poetry-core==1.4.0
 poetry-plugin-export==1.3.0
 ptyprocess==0.7.0
-pycodestyle==2.10.0
+pycodestyle~=2.9.1
 pycparser==2.21
-pyflakes==3.0.1
+pyflakes~=2.5.0
 pyrsistent==0.19.3
 rapidfuzz==2.13.7
 requests==2.28.2
@@ -49,9 +49,22 @@ tomlkit==0.11.6
 tqdm==4.64.1
 trove-classifiers==2023.2.8
 typing_extensions==4.4.0
-urllib3==1.26.14
+urllib3~=1.26.15
 virtualenv==20.19.0
 webencodings==0.5.1
 xattr==0.10.1
 yarl==1.8.2
 zipp==3.13.0
+
+pip~=23.1
+wheel~=0.38.4
+Pillow~=9.4.0
+pytest~=7.3.1
+telegram~=0.0.1
+PyYAML~=6.0
+setuptools~=65.5.0
+pluggy~=1.0.0
+exceptiongroup~=1.1.0
+iniconfig~=2.0.0
+aiosignal~=1.3.1
+coverage~=7.2.3
